# riot-api-helper

./: Cargo.toml  azure-pipelines.yml  config.toml
src/: lib.rs
src/accountv1/: accountv1.rs  mod.rs
src/championv3/: championv3.rs  mod.rs
src/spectatorv4/: mod.rs  spectatorv4.rs
src/summonerv4/: mod.rs  summonerv4.rs
