[package]
name = "league_of_legends_helper"
version = "0.1.0"
authors = ["willofhouse"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "*", features = ["full"] }
futures="*"
reqwest="*"
slurp="*"
serde = { version = "1.0", features = ["derive"] }
toml="*"
tokio-test = "*"
serde_json="*"
